<resources>
    <string name="app_name">GeckoBrowser</string>
    <string name="app_description">Embedded Firefox browser</string>
    <string name="start_button">START</string>
    <string name="nopecha_button">NOPECHA</string>
    <string name="loading">Loading…</string>
    <string name="load_error_title">Couldn\'t load the page</string>
    <string name="load_error_retry">Retry</string>
    <string name="load_error_home">Back to home</string>
    <string name="target_url" translatable="false">https://accounts.hcaptcha.com/demo</string>
</resources>
